# GoldenHeat

./: .gitignore  CLAUDE.md  README.md
.claude/: progress-a.md
backend/: config.py  llm.py  main.py  pyproject.toml
backend/api/: __init__.py  admin.py  admin_clock.py  admin_config.py  admin_watchlist.py  auth.py  auth_routes.py  bullbear.py  clock_public.py  dashboard.py  data_health.py  dca_routes.py  kline_history.py  macro.py  merill.py  response.py  signals.py  technical.py  valuation.py  valuation_v1.py
backend/collectors/: __init__.py  index_pe.py  kline.py  macro_cn.py  macro_us.py  valuation.py
backend/db/: __init__.py  connection.py  migrations.py  schema.sql
backend/engines/: __init__.py  ai_assessor.py  bull_bear.py  clock_assessor.py  merill_clock.py  monthly_signal.py  percentile_analyzer.py  technical_analyzer.py  temperature.py
backend/models/: __init__.py  clock.py  config.py  dca.py  kline.py  macro.py  signal.py  valuation.py  watchlist.py
backend/notify/: telegram_notify.py
backend/repos/: __init__.py  base.py  clock_repo.py  config_repo.py  dca_repo.py  index_pe_repo.py  kline_repo.py  macro_repo.py  valuation_repo.py  watchlist_repo.py
backend/scripts/: backfill_valuation.py  daily_collect.py  migrate_clock.py
docs/: ARCHITECTURE-REVIEW.md  DESIGN.md  EXECUTION.md  HEAT2-PLAN.md
docs/ref/: merrill-clock-research.md
scripts/: backfill.py  init_db.py  test_engines.py
tests/: e2e_test.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts  (+1 more)
(+22 files in other folders)
