[project]
name = "goldenheat"
version = "0.1.0"
description = "AI 中长周期投资决策系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "yfinance>=0.2",
    "akshare>=1.15",
    "fredapi>=0.5",
    "pandas>=2.2",
    "numpy>=2.0",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "scikit-learn>=1.5",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"
